fix(`tooltips_mod`): Increase `z-index`

--- a/tooltips_mod/tooltips_mod.user.css
+++ b/tooltips_mod/tooltips_mod.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Tooltips Mod
 @namespace      github.com/PRO-2684
-@version        0.1.2
+@version        0.1.3
 @description    Implement `title` attribute display as a tooltip on touch screen devices
 @author         PRO-2684
 @license     	gpl-3.0
@@ -49,13 +49,15 @@
     }
 
     [title]:hover::after {
+        // Position the tooltip
         display: inline;
         content: attr(title);
         position: fixed;
         {positions[Position][0]}: 0;
         {positions[Position][1]}: 0;
+        // Style the tooltip
         font-size: 12px;
-        z-index: 9999;
+        z-index: 2147483647;
         background: colors.Background;
         color: colors.Foreground;
         border: BorderStyle colors.BorderColor;
@@ -63,6 +65,7 @@
         opacity: Opacity;
         padding: PaddingY PaddingX;
         margin: MarginY MarginX;
+        // Reset tooltip styles
         line-height: normal;
         font-weight: normal;
         font-style: normal;
